[tool.poetry]
name = "fastapi-keycloack"
version = "0.2.0"
description = ""
authors = ["Elber Nava <elbernava11@gmail.com>"]
license = "MIT"
readme = "README.md"
repository ="https://github.com/elbernv/fastapi-keycloack" 

[tool.poetry.dependencies]
python = "^3.8"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
